--- a/interpreter.vcxproj
+++ b/interpreter.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="interpreter.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Parse.hpp" />
+    <ClInclude Include="Token.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
