--- a/interpreter.vcxproj
+++ b/interpreter.vcxproj
@@ -139,7 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SinglyLinkedList.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="SymbolTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.hpp" />
