--- a/interpreter.vcxproj
+++ b/interpreter.vcxproj
@@ -141,7 +141,7 @@
   <ItemGroup>
     <ClCompile Include="SinglyLinkedList.hpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="SymbolTable.hpp" />
+    <ClCompile Include="SymbolTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Node.hpp" />
