--- a/interpreter.vcxproj.filters
+++ b/interpreter.vcxproj.filters
@@ -15,24 +15,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SymbolTable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SinglyLinkedList.hpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SymbolTable.hpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Token.hpp">
+    <ClInclude Include="Parse.cpp">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Parse.hpp">
+    <ClInclude Include="Tokenizer.cpp">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Node.hpp">
+    <ClInclude Include="AST.cpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SinglyLinkedList.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
