--- a/interpreter.vcxproj
+++ b/interpreter.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="SinglyLinkedList.hpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="SymbolTable.hpp" />
+    <ClCompile Include="SymbolTable.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Node.hpp" />
-    <ClInclude Include="Parse.hpp" />
-    <ClInclude Include="Token.hpp" />
+    <ClInclude Include="AST.cpp" />
+    <ClInclude Include="Parse.cpp" />
+    <ClInclude Include="SinglyLinkedList.h" />
+    <ClInclude Include="Test.hpp" />
+    <ClInclude Include="Tokenizer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
