Lexer and Token

--- a/interpreter.vcxproj
+++ b/interpreter.vcxproj
@@ -141,11 +141,11 @@
   <ItemGroup>
     <ClCompile Include="SinglyLinkedList.hpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="SymbolTable.cpp" />
+    <ClCompile Include="SymbolTable.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AST.cpp" />
-    <ClInclude Include="Parse.cpp" />
+    <ClInclude Include="AST.hpp" />
+    <ClInclude Include="Lexer.hpp" />
     <ClInclude Include="Test.hpp" />
     <ClInclude Include="Token.hpp" />
   </ItemGroup>
